# Practice

./: .gitignore
Codechef/ATM machine/: ATM machine.depend  main.cpp
Codechef/Add two numbers/: Add two numbers.depend  main.cpp
Codechef/BigInput/: BigInput.cbp  BigInput.depend  main.cpp
Codechef/Billiards/: billiards.cpp
Codechef/Le4/: Le4.cpp
Codechef/Sum of digits/: CMakeLists.txt  Sum of digits.cbp  Sum of digits.depend  Sum of digits.layout  main.cpp
Codechef/sort/: sort.cpp
Codechef/sum first and last/FirstLastdigits/: FirstLastdigits.cbp  main.cpp  (+2 more)
Codingbros/Problem 1752/: 1752.cpp
Euler/Eulercodes/: CMakeLists.txt  Eulercodes.cbp  Eulercodes.depend  Eulercodes.layout  Multiples5and3.cpp  Pythagorean triplet.cpp  Xprime.cpp  fibonacci.cpp  fibonacci.h  highlytriangle.cpp  highlytriangle.h  isprime.cpp  largestingrid.cpp  largestingrid.h  largestpalindrome.cpp  largestpalindrome.h  largestproduct.cpp  largestproduct.h  largesum.cpp  largesum.h  lastprime.cpp  lastprime.h  main.cpp  multiples5and3.h  pythagorean.h  smallestmultiple.cpp  smallestmultiple.h  sumofprimes.cpp  sumofprimes.h  sumsquaredifference.cpp  sumsquaredifference.h  xprime.h
Eulercodes/: LongestCollatzsequence.cpp  Multiples5and3.cpp  Pythagorean triplet.cpp  Xprime.cpp  bigint.hpp  fibonacci.cpp  highlytriangle.cpp  isprime.cpp  isprime.h  isprime.hpp  largestingrid.cpp  largestpalindrome.cpp  largestproduct.cpp  largesum.cpp  lastprime.cpp  numberLetterCount.cpp  powerDigitSum.cpp  smallestmultiple.cpp  sumofprimes.cpp  sumsquaredifference.cpp
Kickstar/: Round A.cpp
(+1 files in other folders)
